--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -4,16 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
-  <link rel="stylesheet" href="/public/contact.css">
+  <link rel="stylesheet" href="/contact.css">
+  <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 <body>
-  
+
+
+  <header>
+    <div class="container">
+         <img class="imglogo=" src="/img/silla.ico" alt="">
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
+            </ul>
+            
+        </nav>
+    </div>
+</header>
+
   <main>
     <aside class="social-icons">
-      <a href="URL_DE_TU_PERFIL_DE_FACEBOOK"><img src="/public/img/facebook.ico" alt="Facebook"></a>
-      <a href="URL_DE_TU_PERFIL_DE_TWITTER"><img src="/public/img/gorjeo.ico" alt="Twitter"></a>
-      <a href="URL_DE_TU_PERFIL_DE_INSTAGRAM"><img src="/public/img/instagram.ico" alt="Instagram"></a>
+      <a href="https://www.facebook.com/"><img src="/img/facebook.ico" alt="Facebook"></a>
+      <a href="https://twitter.com/"><img src="/img/gorjeo.ico" alt="Twitter"></a>
+      <a href="https://www.instagram.com/"><img src="/img/instagram.ico" alt="Instagram"></a>
   </aside>
+  
     <section id="contacto">
       <div class="container">
         <h2>Contáctanos</h2>
@@ -35,6 +53,18 @@
       </div>
     </section>
   </main>
-  
+  <footer>
+    <div class="container">
+        <p>&copy; 2024 JORGE-MUEBLES. Todos los derechos reservados.</p>
+        <ul class="footer-links">
+            <li><a href="#">Términos y Condiciones</a></li>
+            <li><a href="#">Política de Privacidad</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+        
+    </div>
+</footer>
+
+ 
 </body>
 </html>
