--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -1,33 +1,82 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Productos</title>
-  <link rel="stylesheet" href="/produ.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/produ.css">
+    <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
+
 <body>
-  <%- include('partials/header') %>
-  <main>
+
+    <header>
+        <div class="container">
+             <img class="imglogo=" src="/img/silla.ico" alt="">
+
+            <nav>
+                <ul>
+                    <li><a href="/index">Inicio</a></li>
+                    <li><a href="/productos">Productos</a></li>
+                    <li><a href="/contactos">Contacto</a></li>
+                    <li><a href="/terraza">terraza</a></li>
+                    <li><a href="/sala">Salas</a></li>
+                    <li><a href="/habitacion">habitacion</a></li>
+                   
+                </ul>
+                
+            </nav>
+        </div>
+    </header>
     <aside class="social-icons">
-      <a href="URL_DE_TU_PERFIL_DE_FACEBOOK"><img src="/public/img/facebook.ico" alt="Facebook"></a>
-      <a href="URL_DE_TU_PERFIL_DE_TWITTER"><img src="/public/img/gorjeo.ico" alt="Twitter"></a>
-      <a href="URL_DE_TU_PERFIL_DE_INSTAGRAM"><img src="/public/img/instagram.ico" alt="Instagram"></a>
-  </aside>
+        <a href="https://www.facebook.com/"><img src="/img/facebook.ico" alt="Facebook"></a>
+        <a href="https://twitter.com/"><img src="/img/gorjeo.ico" alt="Twitter"></a>
+        <a href="https://www.instagram.com/"><img src="/img/instagram.ico" alt="Instagram"></a>
+    </aside>
+    
     <section id="productos">
-      <div class="container">
-        <h2>Todos los Productos</h2>
-       
-          <div class="product">
-            <img src="/public/img/multimueble.jpeg" alt="<%= producto.nombre %>">
-            <h3><%= producto.nombre %></h3>
-            <p class="price">$<%= producto.precio %></p>
-            <a href="#" class="btn">Comprar</a>
-          </div>
-        
-      </div>
+        <div class="container">
+            <h2>Todos los Productos</h2>
+            <div class="product">
+                <img src="/public/img/images.jpeg" alt="Producto 1">
+                <h3>JUEGO DE SALA</h3>
+                <p class="price">$2`500.000.0</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <div class="product">
+                <img src="/img/escritorio.jpg" alt="Producto 2">
+                <h3>ESCRITORIO</h3>
+                <p class="price">$40.00</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <div class="product">
+                <img src="/img/SOFA.jpeg" alt="Producto 2">
+                <h3>SOFA</h3>
+                <p class="price">$40.00</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <div class="product">
+                <img src="/img/multimueble.jpeg" alt="Producto 2">
+                <h3>MULTIMUEBLE</h3>
+                <p class="price">$40.00</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+
+            <!-- Agregar más productos según sea necesario -->
+        </div>
     </section>
-  </main>
-  <%- include('partials/footer') %>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 JORGE-MUEBLES. Todos los derechos reservados.</p>
+            <ul class="footer-links">
+                <li><a href="#">Términos y Condiciones</a></li>
+                <li><a href="#">Política de Privacidad</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            
+        </div>
+    </footer>
+    
+    
 </body>
 </html>
