--- a/views/terraza.ejs
+++ b/views/terraza.ejs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JORGE-MUEBLES</title>
-    <link rel="stylesheet" href="/index.css"> 
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/terraza.css"> 
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
     
 </head>
@@ -20,7 +19,11 @@
                     <li><a href="/productos">Productos</a></li>
                     <li><a href="/contactos">Contacto</a></li>
                 </ul>
-              
+                <ul class="catalogo">
+                    <li><a href="sillas.html">Sillas</a></li>
+                    <li><a href="comedor_de_exteriores.html">Comedor de exteriores</a></li>
+                    <li><a href="camastros.html">Camastros</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -37,9 +40,9 @@
             <div class="container">
                 <h2>Productos Destacados</h2>
                 <div class="product">
-                    <img src="/img/SOFA.jpeg" alt="Producto 1">
+                    <img src="/img/images (1).jpeg" alt="Producto 1">
                     <h3>Producto 1</h3>
-                    <p class="price">$500.000.0</p>
+                    <p class="price">$5'000.000.0</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 
@@ -50,9 +53,9 @@
             <div class="container">
                 <h2>Todos los Productos</h2>
                 <div class="product">
-                    <img src="/img/escritorio.jpg" alt="Producto 2">
+                    <img src="/img/images.jpeg" alt="Producto 2">
                     <h3>Producto 2</h3>
-                    <p class="price">$400.000.0</p>
+                    <p class="price">$4'000.000.0</p>
                     <a href="#" class="btn">Comprar</a>
                 </div>
                 
