nuevos cambios en proyecto web

--- a/views/camastros.ejs
+++ b/views/camastros.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/produ.css">
+    <title>Camastros</title>
+    <link rel="stylesheet" href="/camastros.css">
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 
@@ -22,6 +22,8 @@
                     <li><a href="/terraza">terraza</a></li>
                     <li><a href="/sala">Salas</a></li>
                     <li><a href="/habitacion">habitacion</a></li>
+                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
+                    <li><a href="/sillas">Sillas</a></li>
                    
                 </ul>
                 
@@ -36,29 +38,29 @@
     
     <section id="productos">
         <div class="container">
-            <h2>Todos los Productos</h2>
+            <h2>Camastros Disponibles </h2>
             <div class="product">
-                <img src="/img/images.jpeg" alt="Producto 1">
-                <h3>JUEGO DE TERRAZA</h3>
-                <p class="price">$2`500.000.0</p>
+                <img src="/img/camastro1.jpeg" alt="Producto 1">
+                <h3>Camastro de plastico </h3>
+                <p class="price">$500.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/escritorio.jpg" alt="Producto 2">
-                <h3>ESCRITORIO</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/camastro3.jpeg" alt="Producto 2">
+                <h3>Camastro Keter Tipo Ratán</h3>
+                <p class="price">$450.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/SOFA.jpeg" alt="Producto 2">
-                <h3>SOFA</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/camastro4.jpeg" alt="Producto 2">
+                <h3>REPOSERA CAMASTRO DE MADERA NIZA</h3>
+                <p class="price">$480.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/multimueble.jpeg" alt="Producto 2">
-                <h3>MULTIMUEBLE</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/camastro6.jpeg" alt="Producto 2">
+                <h3>Camastro Con Diseño Tipo Mueble</h3>
+                <p class="price">$3'800.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
 
