--- a/views/habitacion.ejs
+++ b/views/habitacion.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/produ.css">
+    <title>Salas</title>
+    <link rel="stylesheet" href="/habitacion.css">
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 
@@ -20,8 +20,12 @@
                     <li><a href="/productos">Productos</a></li>
                     <li><a href="/contactos">Contacto</a></li>
                     <li><a href="/terraza">terraza</a></li>
+                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
+                    <li><a href="/camastros">Camastros</a></li>
                     <li><a href="/sala">Salas</a></li>
                     <li><a href="/habitacion">habitacion</a></li>
+                    <li><a href="/niños">Niños</a></li>
+                    <li><a href="/niñas">Niñas</a></li>
                    
                 </ul>
                 
@@ -36,31 +40,50 @@
     
     <section id="productos">
         <div class="container">
-            <h2>Todos los Productos</h2>
+            <h2>Productos Disponibles Para Habitaciones</h2>
             <div class="product">
-                <img src="/img/images.jpeg" alt="Producto 1">
-                <h3>JUEGO DE TERRAZA</h3>
-                <p class="price">$2`500.000.0</p>
+                <img src="/img/cama1.jpeg" alt="Producto 1">
+                <h3>Sala Basica embonada</h3>
+                <p class="price">$3'500.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/escritorio.jpg" alt="Producto 2">
-                <h3>ESCRITORIO</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/cama2.jpeg" alt="Producto 2">
+                <h3>Sala En Colores De Otoño</h3>
+                <p class="price">$4'600.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/SOFA.jpeg" alt="Producto 2">
-                <h3>SOFA</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/sala3.jpeg" alt="Producto 2">
+                <h3>Sala Moderna Belarus</h3>
+                <p class="price">$6'000.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/multimueble.jpeg" alt="Producto 2">
-                <h3>MULTIMUEBLE</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/sala5.jpeg" alt="Producto 2">
+                <h3>Sala Chester</h3>
+                <p class="price">$950.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
+            <div class="product">
+                <img src="/img/sala6.jpeg" alt="Producto 2">
+                <h3>Muebles de sala color blanco </h3>
+                <p class="price">$1'050.000.0</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <div class="product">
+                <img src="/img/sala7.jpeg" alt="Producto 2">
+                <h3>Sala tipo L Color Blanco</h3>
+                <p class="price">$1'950.000.0</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+            <div class="product">
+                <img src="/img/sala8.jpeg" alt="Producto 2">
+                <h3>Sala Aria Sorf Gris</h3>
+                <p class="price">$5'000.000.0</p>
+                <a href="#" class="btn">Comprar</a>
+            </div>
+
 
             <!-- Agregar más productos según sea necesario -->
         </div>
