--- a/views/terraza.ejs
+++ b/views/terraza.ejs
@@ -18,12 +18,11 @@
                     <li><a href="/index">Inicio</a></li>
                     <li><a href="/productos">Productos</a></li>
                     <li><a href="/contactos">Contacto</a></li>
+                    <li><a href="/sillas">Sillas</a></li>
+                    <li><a href="/camastros">Camastros</a></li>
+                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
                 </ul>
-                <ul class="catalogo">
-                    <li><a href="sillas.html">Sillas</a></li>
-                    <li><a href="comedor_de_exteriores.html">Comedor de exteriores</a></li>
-                    <li><a href="camastros.html">Camastros</a></li>
-                </ul>
+                
             </nav>
         </div>
     </header>
@@ -38,7 +37,7 @@
         
         <section id="destacados">
             <div class="container">
-                <h2>Productos Destacados</h2>
+                <h2>Productos Destacados Para Terraza</h2>
                 <div class="product">
                     <img src="/img/images (1).jpeg" alt="Producto 1">
                     <h3>Producto 1</h3>
