--- a/views/comedor_de_exteriores.ejs
+++ b/views/comedor_de_exteriores.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/produ.css">
+    <title>Comedor De Exteriores</title>
+    <link rel="stylesheet" href="/comedor de exteriores.css">
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 
@@ -22,6 +22,8 @@
                     <li><a href="/terraza">terraza</a></li>
                     <li><a href="/sala">Salas</a></li>
                     <li><a href="/habitacion">habitacion</a></li>
+                    <li><a href="/sillas">Sillas</a></li>
+                    <li><a href="/camastros">Camastros</a></li>
                    
                 </ul>
                 
@@ -36,29 +38,29 @@
     
     <section id="productos">
         <div class="container">
-            <h2>Todos los Productos</h2>
+            <h2>Comedores Disponibles </h2>
             <div class="product">
-                <img src="/img/images.jpeg" alt="Producto 1">
-                <h3>JUEGO DE TERRAZA</h3>
+                <img src="/img/comedor1.jpeg" alt="Producto 1">
+                <h3>Set Comedor De Exteriores</h3>
                 <p class="price">$2`500.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/escritorio.jpg" alt="Producto 2">
-                <h3>ESCRITORIO</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/comedor2.jpeg" alt="Producto 2">
+                <h3>Comedor de exterior Amalfi Cuadrado</h3>
+                <p class="price">$900.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/SOFA.jpeg" alt="Producto 2">
-                <h3>SOFA</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/comedor3.jpeg" alt="Producto 2">
+                <h3>Mueble Comedor Exterior</h3>
+                <p class="price">$600.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/multimueble.jpeg" alt="Producto 2">
-                <h3>MULTIMUEBLE</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/comedor4.jpeg" alt="Producto 2">
+                <h3>COMEDOR DE EXTERIOR NEPAL, NEGRO, INCLUYE CUATRO SILLAS - VMOD-116</h3>
+                <p class="price">$940.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
 
