--- a/views/sillas.ejs
+++ b/views/sillas.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/produ.css">
+    <link rel="stylesheet" href="/silla.css">
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
 
@@ -20,6 +20,8 @@
                     <li><a href="/productos">Productos</a></li>
                     <li><a href="/contactos">Contacto</a></li>
                     <li><a href="/terraza">terraza</a></li>
+                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
+                    <li><a href="/camastros">Camastros</a></li>
                     <li><a href="/sala">Salas</a></li>
                     <li><a href="/habitacion">habitacion</a></li>
                    
@@ -36,29 +38,29 @@
     
     <section id="productos">
         <div class="container">
-            <h2>Todos los Productos</h2>
+            <h2>Sillas Disponibles</h2>
             <div class="product">
-                <img src="/img/images.jpeg" alt="Producto 1">
-                <h3>JUEGO DE TERRAZA</h3>
-                <p class="price">$2`500.000.0</p>
+                <img src="/img/silla 1.jpeg" alt="Producto 1">
+                <h3>Silla Exterior Rattan Sintético Celeste</h3>
+                <p class="price">$350.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/escritorio.jpg" alt="Producto 2">
-                <h3>ESCRITORIO</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/silla 3.jpeg" alt="Producto 2">
+                <h3>Silla tipo nido colgante</h3>
+                <p class="price">$400.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/SOFA.jpeg" alt="Producto 2">
-                <h3>SOFA</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/silla 4.jpeg" alt="Producto 2">
+                <h3>Sillas de diseño para decorar</h3>
+                <p class="price">$600.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/multimueble.jpeg" alt="Producto 2">
-                <h3>MULTIMUEBLE</h3>
-                <p class="price">$40.00</p>
+                <img src="/img/silla 5.jpeg" alt="Producto 2">
+                <h3>Sillón Colgante Rattan Sintético Wengué</h3>
+                <p class="price">$950.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
 
