nuevos cambios en proyecto web

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index">Inicio</a></li>
-                    <li><a href="/productos">Productos</a></li>
-                    <li><a href="/contactos">Contacto</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="productos">Productos</a></li>
+                    <li><a href="contactos">Contacto</a></li>
                 </ul>
               
             </nav>
@@ -46,18 +46,7 @@
             </div>
         </section>
         
-        <section id="productos">
-            <div class="container">
-                <h2>Todos los Productos</h2>
-                <div class="product">
-                    <img src="/img/escritorio.jpg" alt="Producto 2">
-                    <h3>Producto 2</h3>
-                    <p class="price">$400.000.0</p>
-                    <a href="#" class="btn">Comprar</a>
-                </div>
-                
-            </div>
-        </section>
+       
     </main>
     
     <footer>
