--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -16,9 +16,9 @@
 
         <nav>
             <ul>
-                <li><a href="/index">Inicio</a></li>
-                <li><a href="/productos">Productos</a></li>
-                <li><a href="/contactos">Contacto</a></li>
+                <li><a href="index">Inicio</a></li>
+                <li><a href="productos">Productos</a></li>
+                <li><a href="contactos">Contacto</a></li>
             </ul>
             
         </nav>
