--- a/views/habitacion.ejs
+++ b/views/habitacion.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salas</title>
+    <title>Habitacion</title>
     <link rel="stylesheet" href="/habitacion.css">
     <link rel="shortcut icon" href="/img/silla.ico" type="image/x-icon">
 </head>
@@ -16,16 +16,15 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index">Inicio</a></li>
-                    <li><a href="/productos">Productos</a></li>
-                    <li><a href="/contactos">Contacto</a></li>
-                    <li><a href="/terraza">terraza</a></li>
-                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
-                    <li><a href="/camastros">Camastros</a></li>
-                    <li><a href="/sala">Salas</a></li>
-                    <li><a href="/habitacion">habitacion</a></li>
-                    <li><a href="/niños">Niños</a></li>
-                    <li><a href="/niñas">Niñas</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="productos">Productos</a></li>
+                    <li><a href="contactos">Contacto</a></li>
+                    <li><a href="terraza">terraza</a></li>
+                    <li><a href="comedor">Comedor</a></li>
+                    <li><a href="camastros">Camastros</a></li>
+                    <li><a href="sala">Salas</a></li>
+                    <li><a href="habitacion">habitacion</a></li>
+                   
                    
                 </ul>
                 
@@ -49,43 +48,37 @@
             </div>
             <div class="product">
                 <img src="/img/cama2.jpeg" alt="Producto 2">
-                <h3>Sala En Colores De Otoño</h3>
-                <p class="price">$4'600.000.0</p>
+                <h3>cama En Colores grices</h3>
+                <p class="price">$8'600.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/sala3.jpeg" alt="Producto 2">
-                <h3>Sala Moderna Belarus</h3>
-                <p class="price">$6'000.000.0</p>
+                <img src="/img/cama3.jpeg" alt="Producto 2">
+                <h3>cama Moderna Belarus</h3>
+                <p class="price">$7'000.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/sala5.jpeg" alt="Producto 2">
-                <h3>Sala Chester</h3>
-                <p class="price">$950.000.0</p>
+                <img src="/img/cama4.jpeg" alt="Producto 2">
+                <h3>cama en tonos oscuros </h3>
+                <p class="price">$9'500.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/sala6.jpeg" alt="Producto 2">
-                <h3>Muebles de sala color blanco </h3>
-                <p class="price">$1'050.000.0</p>
+                <img src="/img/cama5.jpeg" alt="Producto 2">
+                <h3>Muebles para habitacion en tono amaderado </h3>
+                <p class="price">$10'050.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
             <div class="product">
-                <img src="/img/sala7.jpeg" alt="Producto 2">
-                <h3>Sala tipo L Color Blanco</h3>
-                <p class="price">$1'950.000.0</p>
+                <img src="/img/cama6.jpeg" alt="Producto 2">
+                <h3>cama y accesorios en tono primaveral</h3>
+                <p class="price">$12'950.000.0</p>
                 <a href="#" class="btn">Comprar</a>
             </div>
-            <div class="product">
-                <img src="/img/sala8.jpeg" alt="Producto 2">
-                <h3>Sala Aria Sorf Gris</h3>
-                <p class="price">$5'000.000.0</p>
-                <a href="#" class="btn">Comprar</a>
-            </div>
+            
 
-
-            <!-- Agregar más productos según sea necesario -->
+         
         </div>
     </section>
     <footer>
