--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -16,12 +16,12 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index">Inicio</a></li>
-                    <li><a href="/productos">Productos</a></li>
-                    <li><a href="/contactos">Contacto</a></li>
-                    <li><a href="/terraza">terraza</a></li>
-                    <li><a href="/sala">Salas</a></li>
-                    <li><a href="/habitacion">habitacion</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="productos">Productos</a></li>
+                    <li><a href="contactos">Contacto</a></li>
+                    <li><a href="terraza">terraza</a></li>
+                    <li><a href="sala">Salas</a></li>
+                    <li><a href="habitacion">habitacion</a></li>
                    
                 </ul>
                 
