--- a/views/sillas.ejs
+++ b/views/sillas.ejs
@@ -16,14 +16,14 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index">Inicio</a></li>
-                    <li><a href="/productos">Productos</a></li>
-                    <li><a href="/contactos">Contacto</a></li>
-                    <li><a href="/terraza">terraza</a></li>
-                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
-                    <li><a href="/camastros">Camastros</a></li>
-                    <li><a href="/sala">Salas</a></li>
-                    <li><a href="/habitacion">habitacion</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="productos">Productos</a></li>
+                    <li><a href="contactos">Contacto</a></li>
+                    <li><a href="terraza">terraza</a></li>
+                    <li><a href="comedor">Comedor</a></li>
+                    <li><a href="camastros">Camastros</a></li>
+                    <li><a href="sala">Salas</a></li>
+                    <li><a href="habitacion">habitacion</a></li>
                    
                 </ul>
                 
