--- a/views/terraza.ejs
+++ b/views/terraza.ejs
@@ -15,12 +15,12 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index">Inicio</a></li>
-                    <li><a href="/productos">Productos</a></li>
-                    <li><a href="/contactos">Contacto</a></li>
-                    <li><a href="/sillas">Sillas</a></li>
-                    <li><a href="/camastros">Camastros</a></li>
-                    <li><a href="/comedor_de_exteriores">Comedor de exteriores</a></li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="productos">Productos</a></li>
+                    <li><a href="contactos">Contacto</a></li>
+                    <li><a href="sillas">Sillas</a></li>
+                    <li><a href="camastros">Camastros</a></li>
+                    <li><a href="comedor">Comedor</a></li>
                 </ul>
                 
             </nav>
