nuevos cambios en proyecto web

--- a/views/contactos.ejs
+++ b/views/contactos.ejs
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a href="index">Inicio</a></li>
+                <li><a href="/">Inicio</a></li>
                 <li><a href="productos">Productos</a></li>
                 <li><a href="contactos">Contacto</a></li>
             </ul>
