--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -21,6 +21,7 @@
                     <li><a href="contactos">Contacto</a></li>
                     <li><a href="terraza">terraza</a></li>
                     <li><a href="sala">Salas</a></li>
+                    <li><a href="carrito">Comprar</a></li>
                    
                    
                 </ul>
